# yt-to-cloud-uploader

./: .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  client_secrets-example.json  docker-compose.yml  main.py  metadata.json  package-lock.json  pyproject.toml  replit.nix  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: autocomment-issue.yml  autocomment-pr-raise.yml.txt  requirements-autoupdate.yml
.github/workflows/workflows/: autocomment-on-events.yml  python-lint-format.yml  python-run-tests.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: README.md  main.py  req.txt
core/: base.py  gcloud.py  youtube.py
docs/: endpoints.md  pages.md  technologies.md
frontend/: Dockerfile
