[project]
name = "backend"
version = "0.1.0"
description = "The backend for the youtube to cloud uploader."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.2",
    "httpx>=0.27.2",
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]


[tool.ruff]
fix = true

[tool.ruff.lint]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']
